<resources>
    <string name="app_name">CatFeeder</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in to continue</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title">Cat Feeder</string>
    <string name="sign_in_button">Sign In</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="new_account">I need to create an account</string>
    <string name="menu">Menu</string>
    <string name="feeder_status">Feeder Status</string>
    <string name="feeder_log">Feeder Log</string>
    <string name="schedule_feeding">Schedule Feedings</string>
    <string name="activate_feeder">Activate Feeder</string>
    <string name="view_camera">View Camera</string>
    <string name="activate_laser">Activate Laser</string>
    <string name="sign_out">Sign Out</string>
    <string name="back">Back</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="feeding1">Feeding Time 1</string>
    <string name="feeding2">Feeding Time 2</string>
    <string name="feeding3">Feeding Time 3</string>
</resources>